styles/globals.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html {
  font-size: 62.5%;
}
html,
body {
  font-family: Euclid Circular A, -apple-system, BlinkMacSystemFont, Segoe UI,
    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
    sans-serif;
  background-color: #000;
  color: #fff;
}

a {
  color: inherit;
  text-decoration: none;
}

ul,
li {
  list-style: none;
}

